--- a/static/css/css-all.css
+++ b/static/css/css-all.css
@@ -169,19 +169,36 @@ a{
 }
 
 /****************usermanagement-start**************/
-.UM_container{
-    /* background: red; */
+.UM_rightNav{
+    margin-top: 20%;
+    width:100%;
+    height:10%;
+    /* background: palegreen; */
+    text-align:right;
+    font-family: Microsoft Yahei;
+    font-size: 105%;
+    border-collapse: collapse; 
 }
+/*.dMrightNav{
+    margin-top: 20%;
+    width:100%;
+    height:35%;
+    text-align:right;
+    font-family: Microsoft Yahei;
+    font-size: 105%;
+    border-collapse: collapse; 
+}*/
 /*manybtn  same with dMmaybtn*/
 /*search  same with dMsearch*/
 /*searchbtn  same with dMsearchbtn*/
 /*searchbox  same with dMsrchPrintbox*/
 .UM_userList{
     /* border: solid 1px hsl(174, 29%, 64%); */
-    width: 70%;
+    width: 90%;
     height: 80%;
+    float: left;
     margin-top: 2%;
-    margin-left: 3%;
+    margin-left: 5%;
     overflow: scroll;
     overflow-x: hidden;
 }
@@ -245,15 +262,12 @@ a{
 }
 
 .UE_authority_setting{
-	border: solid 1px hsl(174, 29%, 64%);
+    border: solid 1px hsl(174, 29%, 64%);
+    float: left;
 	width:90%;
-	height:55%;
+	height:90%;
 	margin-top:1%;
-	margin-left:60;
-}
-
-.UE_authority_setting > button{
-	margin-left:1000;
+	margin-left:5%;
 }
 
 .UE_authority_changing{
@@ -274,10 +288,21 @@ a{
 }
 .UE_fileList{
     border: solid 1px hsl(174, 29%, 64%);
-    width: 93%;
-    height: 60%;
+    float: left;
+    width: 95%;
+    height: 70%;
     margin-top: 1%;
-    margin-left: 60;
+    margin-left: 2%;
+    overflow: scroll;
+    overflow-x: hidden;
+}
+.UE_fileList{
+    border: solid 1px hsl(174, 29%, 64%);
+    float: left;
+    width: 95%;
+    height: 70%;
+    margin-top: 1%;
+    margin-left: 2%;
     overflow: scroll;
     overflow-x: hidden;
 }
@@ -299,23 +324,26 @@ a{
 }
 .UE_permissiontable{
     width:100%;
-    height:80%;
     /* background: palegreen; */
     text-align:center;
     font-family: MicrosoftYahei;
-    font-size: 105%;
+    font-size: 100%;
     border-collapse: collapse; 
 }
 .UE_permissiontable_tr{
-    padding:0;
-    margin:0;
-    font-family: Microsoft Yahei;
-    font-size: 105%;
-    border-collapse: collapse; 
-    text-align: center;
+    height:60px; 
 }
 .UE_permissiontable_tr:hover{
     background:hsl(174, 29%, 64%);
+}
+.UE_button {
+    background:hsl(174, 29%, 64%);
+    border:0;
+    border-radius:5px;
+    width:10%;
+    height:5%;
+    font-family: Microsoft Yahei;
+    font-size: 100%;
 }
 /***************userEdit-end**************/
 /*****************taskManagement-start**************/
@@ -687,8 +715,9 @@ a{
 
 .dMmanybtn{
     width:90%;
+    float: left;
     margin-top:20;
-    margin-left:50;
+    margin-left:5%;
     padding: 0.5%;
     height:4%;
     /* float: left; */
@@ -836,47 +865,45 @@ a{
 #uAmainLabelBox{
     /*background:gray;*/
     width: 93%;
-    height: 85%;
     margin-top: 2%;
 	margin-left: 2%;
 	padding:0;
 	float: left;
 }
 
-
 #uAtabelbox{
-    /*background: blueviolet;*/
+     /*background: blueviolet;*/
 	/*border: 1px;*/
 	/*border-radius: 5px;*/
 	width:40%;
-    height:33%;
+   /* height:33%;*/
 	margin-top: 6%;
     margin-left: 23%;
 	padding: 2%;
-	padding-top:1.5%;
-	padding-bottom:1.5%;
+	padding-top:1%;
+	padding-bottom:1%;
 }
-
+#uAtr{
+    height: 60px;
+}
+.uAtr-tip{
+    width: 25%;
+    height: 20px;
+}
 #uAtd0{
-	/*background:blue;*/
-    /*border:1px solid black;*/
-    width:20%;
-    height:33%;
+	width:15%;
     font-family: Microsoft Yahei;
     font-size: 20;
 	text-align:center;
 }
 #uAtd1{
-	/*background:red;*/
-    /*border: 1px solid black;*/
-    /*width:67%;*/
-    /*height:33%;*/
+    width: 55%;
     font-family: Microsoft Yahei;
     font-size: 20;
 }
 #uAPrintbox{
-    height:55%;
-    width:90%;
+    /*width:90%;*/
+    height: 35px;
 	margin-top:1%;
     margin-left: 3%;
     padding-left:1%;
@@ -887,7 +914,7 @@ a{
 
 #uAcheckBox{
 	/*background: blueviolet;*/
-	width:60%;
+	width:45%;
     height:18%;
 	margin-top: 0%;
     margin-left: 24%;
@@ -923,11 +950,11 @@ a{
 	width:10%;
     height:5%;
 	margin-top: 0.5%;
-    margin-left: 24%;
+    margin-left: 36.5%;
 	/*border: 1px solid black;*/
-	padding-top:4%;
+	/*padding-top:4%;
 	padding-left: 2%;
-	padding-bottom: 1%;
+	padding-bottom: 1%;*/
 }
 .uAbutton {
     background: hsl(174, 29%, 64%);
