--- a/static/css/css-all.css
+++ b/static/css/css-all.css
@@ -677,31 +677,31 @@ a{
     width:95%;
     height:87%;
     border: solid 1px hsl(174, 29%, 64%);
-    overflow:auto;
-    overflow-x: auto;
+    overflow: scroll;
+    border-collapse: collapse; 
 }
 .JD_resultDir{
     /* display: inline-block; */
-    margin-top:0.5%;
+    margin-top:2%;
     margin-left:3%;
     float:left;
     /* background: rgb(168, 168, 214); */
-    height:7%;
+    height:5%;
     width:70%;
 }
-.JD_resultDir >span> p{
+.JD_resultDir >span> label{
     margin-top: 1%;
     height:80%;
     width:100%;
-    font-size: 120%;
+    font-size: 110%;
     font-family: Microsoft Yahei;
     /* background: crimson; */
 }
 .JD_state{
-    margin-top: 0%;
+    margin-top: 2%;
     display: inline-block;
     margin-left:8.4%;
-    font-size: 120%;
+    font-size: 110%;
     font-family: Microsoft Yahei;
     /*float: left;
     /* background: crimson; */
@@ -733,7 +733,7 @@ a{
     width:19%;
     height:100%;
     /* background: cornflowerblue; */
-    font-size: 120%;
+    font-size: 105%;
     font-family: Microsoft Yahei;
 }
 .JD_infoContainer > textarea{
@@ -745,13 +745,14 @@ a{
     font-family: Microsoft Yahei;
 }
 .JD_infoContainer>p{
-    margin-top: 7%;
+    margin-top: 1%;
 }
 .JD_rightorwrong{
+    margin-left: 10px;
     margin-top: 12%;
 }
 .JD_rightorwrong > label{
-    margin-right:31%;
+    margin-right:10%;
 }
 .JD_imageChange{
     margin-top: 7%;
@@ -1101,7 +1102,13 @@ a{
     margin-top:1%;
     font-size: 10px;
     /*width: 150px;
-    height: 300px;*/
-    
+    height: 300px;*/  
+}
+.validateTree{
+    margin-left:2%;
+    margin-top:1%;
+    font-size: 12px;
+    /*width: 150px;
+    height: 300px;*/  
 }
 
