--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,61 +1,140 @@
-body {
-	background: hsl(172, 36%, 84%);
+body{
+    margin: 0;
+    /* width: 1920px;
+    height: 1080px; */
+    /* background: rgba(102, 102, 102, 0.473); */
+    background: rgba(255, 255, 255, 0.822);
+}
+
+
+#mainBox{
+    background-color: rgba(97, 96, 96, 0.308);
+    margin:0 !important;
+    width: 1905px;
+    height: 934px;
+    /* width:100%;
+    height:100%; */
+}
+
+
+#div_bg_img{
+    /* background-image: url(../images/bing/Knuthojdsmossen.jpg); */
+    background-size:cover; 
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
-    background-size: cover;
+    /* position: absolute; */
+    /* width: 100%;
+    height: 100%; */
+    width: 1905px;
+    height: 934px;
 }
 
-.container {
-	margin-top: 100px;
+#container {
+    width: 1905px;
+    height: 934px;
+    /* width: 100%; */
+    /* height: 100%; */
+    position: absolute;
+    top: 0;
+    left: 0;
+    /* border:1px solid black; */
+    /* margin-top: 8%; */
 }
+
+.ct_tr1{
+    width: 100%;
+    height: 100%;
+}
+.ct_tr1_td1{
+    width: 50%;
+    height: 100%;
+    /* padding-left: 320px; */
+    padding-left: 17%;
+}
+.ct_tr1_td2{
+    width: 50%;
+    height: 100%;
+    /* padding-right: 320px; */
+    padding-right: 17%;
+}
+
+.ct_tr2{
+    width: 100%;
+    height: 100%;
+}
+.ct_tr2_td{
+    width: 100%;
+    height: 100%;
+    padding: 0;
+}
+
+
+
 
 h1 {
-    text-align: center;
-    font-size: 40px;
+    /* width: 400px; */
+    /* text-align: center; */
+    font-size: 34px;
     font-family: Microsoft YaHei;
-    color: rgb(44, 128, 114);
-    font-weight: 500;
+    background-color: rgba(70, 70, 70, 0); 
+    color: rgba(255, 255, 255, 0.952);
+    font-weight: 550;
+}
+h3 {
+    /* text-align: center; */
+    font-size: 20px;
+    font-family: Microsoft YaHei;
+    color: rgba(255, 255, 255, 0.952);
+    font-weight: 300;
 }
 
 .signin {
-    width: 20%;
-    margin: 100px auto 0;
-    /* background-color: rgba(117, 230, 196, 0.13); */
-    padding: 40px;
-    border: 0px ridge rgba(238, 238, 238, 0.13);
-    /* border-radius: 5px; */
-    /* -moz-box-shadow: 0 -5px 10px 1px rgba(16, 16, 16, 0.57);
-	-webkit-box-shadow: 0 -5px 10px 1px rgba(16, 16, 16, 0.57); */
-	/* box-shadow: 0 -5px 10px 1px rgba(16, 16, 16, 0.57); */
-	border-bottom: none;
+    width: 40%;
+    padding: 50px;
+    padding-top: 55;
+    padding-bottom: 55; 
+    margin: 50px auto 0;
+    background-color: ghostwhite; 
+    border: 1px solid rgba(214, 214, 214, 0.911);
+    box-shadow: rgb(49, 49, 49) 0px 3px 15px;
 }
+
 
 input.user {
     width: 100%;
     padding:  10px 10px 10px 25px;
-    background:rgba(68, 163, 135, 0.13);
-    border: 0px solid rgb(44, 128, 114);
-    /* border-radius: 5px; */
+    /* background:rgba(68, 163, 135, 0.13); */
+    background: ghostwhite;
+    border: 1px solid rgba(177, 177, 177, 0.432);
     font-family: Microsoft Yahei;
     font-size: 18px;
-    color: rgb(44, 128, 114);
+    /* color: rgb(44, 128, 114); */
+    color: rgb(80, 80, 80);
+    outline: none;
+    margin-bottom: 20px;
+    letter-spacing: 1px;
+}
+input.user:hover {
+	border: 1px solid rgb(47, 183, 247)  !important;
+}
+
+input.pass {
+    width: 100%;
+    padding: 10px 10px 10px 25px;
+    /* background: rgba(68, 163, 135, 0.13); */
+    background: ghostwhite;
+    border: 1px solid rgba(177, 177, 177, 0.432);
+    font-family: Microsoft Yahei;
+    font-size: 18px;
+    /* color: rgb(44, 128, 114); */
+    color: rgb(80, 80, 80);
     outline: none;
     margin-bottom: 20px;
     letter-spacing: 2px;
 }
-input.pass {
-    width: 100%;
-    padding: 10px 10px 10px 25px;
-    background: rgba(68, 163, 135, 0.13);
-    border: 0px solid rgb(44, 128, 114);
-    /* border-radius: 5px; */
-    font-family: Microsoft Yahei;
-    font-size: 18px;
-    color: rgb(44, 128, 114);
-    outline: none;
-    margin-bottom: 20px;
-    letter-spacing: 2px;
+input.pass:hover {
+    border: 1px solid rgb(47, 183, 247)  !important;
 }
 
 label {
@@ -66,31 +145,74 @@ label {
 input[type="submit"] {
     width: 100%;
     padding: 10px 0;
-    margin-top: 20px;
+    margin-top: 25px;
     outline: none;
     border: 0px solid rgb(44, 128, 114);
     font-family: Microsoft Yahei;
     font-size: 18px;
-    font-weight: 500;
-    color: rgb(44, 128, 114);
-    background-color: rgba(68, 163, 135, 0.13);
-    /* border-radius: 5px; */
+    font-weight: 650;
+    color: rgb(255, 255, 255);
+    background-color: rgb(47, 183, 247);    
+    /* background-color: rgb(47, 183, 247);  */
     cursor: pointer;
     letter-spacing: 10px;
 }
-input[type="button"]:hover {
-	background-color: rgba(12, 100, 66, 0.52);
-	-webkit-transition: all 0.5s ease-in-out;
-    -moz-transition: all 0.5s ease-in-out;
-    -o-transition: all 0.5s ease-in-out;
-    transition: all 0.5s ease-in-out;
+input[type="submit"]:hover {
+	background-color: rgb(40, 161, 218);
+	-webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
 }
 
+
+#switch_box{
+    /* width: 12%; */
+    width: 220px;
+    height: 5%;
+    margin: 50px auto 0;
+    padding: 15px;
+}
+#sw_box_td{
+    width: 33%;
+    height: 2px;
+    /* background-color: green; */
+}
+
+#sw_btn_1{
+    margin-left: 5px;
+    margin-right: 5px;
+	/*width: 100%;*/
+    height: 28%;
+    background-color: rgba(231, 231, 231, 0.788);
+    cursor:pointer;
+}
+#sw_btn_2{
+    margin-left: 5px;
+    margin-right: 5px;
+    height: 28%;
+    background-color: rgba(146, 146, 146, 0.788);
+    cursor:pointer;
+}
+#sw_btn_3{
+    margin-left: 5px;
+    margin-right: 5px;
+    height: 28%;
+    background-color: rgba(146, 146, 146, 0.788);
+    cursor:pointer;
+}
+
+
 .footer {
+    /* background-color: rgba(39, 77, 204, 0.877);  */
     text-align: center;
-    margin-top: 210px;
+    margin-top: 50px;
+    margin-bottom: 20px;
 }
 .footer p {
     font-family: Microsoft Yahei;
-    color: rgb(44, 128, 114);
+    /* color: rgb(44, 128, 114); */
+    color: ghostwhite;
 }
+
+
