--- a/public/css/login.css
+++ b/public/css/login.css
@@ -8,7 +8,7 @@ body{
 
 
 #mainBox{
-    background-color: rgba(97, 96, 96, 0.308);
+    background-color: rgb(95, 95, 97);
     margin:0 !important;
     width: 1905px;
     height: 934px;
@@ -16,6 +16,17 @@ body{
     height:100%; */
 }
 
+.footer {
+    background-color: rgb(95, 95, 97); 
+    text-align: center;
+    margin-top: 50px;
+    height: 26px;
+}
+.footer p {
+    font-family: Microsoft Yahei;
+    /* color: rgb(44, 128, 114); */
+    color: rgb(141, 141, 141);
+}
 
 #div_bg_img{
     /* background-image: url(../images/bing/Knuthojdsmossen.jpg); */
@@ -39,12 +50,23 @@ body{
     top: 0;
     left: 0;
     /* border:1px solid black; */
+    border-collapse:collapse;
     /* margin-top: 8%; */
+}
+
+#ct_tr1_bg{
+    width: 100%;
+    height: 57%;
+    position: absolute;
+    top: 13%;
+    left: 0;
+    background: rgba(233, 230, 230, 0.397);
 }
 
 .ct_tr1{
     width: 100%;
     height: 100%;
+    /* background: rgba(194, 191, 191, 0.562); */
 }
 .ct_tr1_td1{
     width: 50%;
@@ -77,16 +99,18 @@ h1 {
     /* text-align: center; */
     font-size: 34px;
     font-family: Microsoft YaHei;
-    background-color: rgba(70, 70, 70, 0); 
-    color: rgba(255, 255, 255, 0.952);
+    background-color: rgba(19, 7, 7, 0); 
+    /* color: rgba(255, 255, 255, 0.952); */
+    color: rgba(12, 12, 12, 0.952);
     font-weight: 550;
 }
 h3 {
     /* text-align: center; */
     font-size: 20px;
     font-family: Microsoft YaHei;
-    color: rgba(255, 255, 255, 0.952);
-    font-weight: 300;
+    /* color: rgba(255, 255, 255, 0.952); */
+    color: rgba(26, 26, 26, 0.952);
+    font-weight: 400;
 }
 
 .signin {
@@ -97,7 +121,7 @@ h3 {
     margin: 50px auto 0;
     background-color: ghostwhite; 
     border: 1px solid rgba(214, 214, 214, 0.911);
-    box-shadow: rgb(49, 49, 49) 0px 3px 15px;
+    box-shadow: rgba(49, 49, 49, 0.568) 0px 3px 10px;
 }
 
 
@@ -168,13 +192,13 @@ input[type="submit"]:hover {
 
 #switch_box{
     /* width: 12%; */
-    width: 220px;
+    width: 340px;
     height: 5%;
     margin: 50px auto 0;
     padding: 15px;
 }
 #sw_box_td{
-    width: 33%;
+    width: 20%;
     height: 2px;
     /* background-color: green; */
 }
@@ -201,18 +225,21 @@ input[type="submit"]:hover {
     background-color: rgba(146, 146, 146, 0.788);
     cursor:pointer;
 }
+#sw_btn_4{
+    margin-left: 5px;
+    margin-right: 5px;
+    height: 28%;
+    background-color: rgba(146, 146, 146, 0.788);
+    cursor:pointer;
+}
+#sw_btn_5{
+    margin-left: 5px;
+    margin-right: 5px;
+    height: 28%;
+    background-color: rgba(146, 146, 146, 0.788);
+    cursor:pointer;
+}
 
 
-.footer {
-    /* background-color: rgba(39, 77, 204, 0.877);  */
-    text-align: center;
-    margin-top: 50px;
-    margin-bottom: 20px;
-}
-.footer p {
-    font-family: Microsoft Yahei;
-    /* color: rgb(44, 128, 114); */
-    color: ghostwhite;
-}
 
 
